Fix #1323 - Minal theme text align Calendar

--- a/themes/minimal/css-2.0.0/style.css
+++ b/themes/minimal/css-2.0.0/style.css
@@ -2771,6 +2771,7 @@ div.faq_body {
 
 .optionbox, .descriptionbox {
 	border: solid #000 1px;
+	vertical-align: top;
 	padding: 3px;
 }
 
